# qarwyn

./: .gitignore  Cargo.toml  LICENSE  README.md  pyproject.toml
.github/workflows/: release.yaml
src/: input.rs  lib.rs  llm.rs  output.rs  pipelines.rs  prompt.rs  prompting.rs
src/input/: payload.rs
src/llm/: client.rs  request.rs
src/output/: parse.rs  types.rs
src/pipelines/: grading.rs
src/prompt/: llm_payload.rs  schema.rs
tests/: pipeline_test.rs
