[package]
name = "qarwyn"
version = "0.1.0"
edition = "2024"

[dependencies]
# Async Runtime
tokio = { version = "1.40", features = ["full"] }

# LLM
reqwest = { version = "0.13", features = ["json", "rustls"] }

# Data Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error Handling
anyhow = "1.0"

