[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "qarwyn"
version = "0.1.0"
description = "Rust-powered LLM essay grading engine"
requires-python = ">=3.12"
authors = [{name = "Rauf Hamidy"}]
dependencies = []

[tool.maturin]
features = ["pyo3/abi3-py312", "pyo3/extension-module"]
module-name = "qarwyn"

