[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "qarwyn"
version = "0.1.1"
description = "Rust-powered LLM essay grading engine"
readme = {file = "README.md", content-type = "text/markdown"}
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{name = "Rauf Hamidy", email = "raufhamidy10@gmail.com"}]
repository = "https://github.com/raufh10/qarwyn"
keywords = ["llm", "grading"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Rust",
    "Operating System :: OS Independent",
]
dependencies = []

[tool.maturin]
features = ["pyo3/abi3-py310", "pyo3/extension-module"]
module-name = "qarwyn"
